<!-- string variables for text displayed on our mobile device-->
<!--contributors: Zaroon, Spencer, Edward, anthony-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Freelancer</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713 </string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Consumer Registration</string>
    <string name="action_register_contractor">Contractor Registration</string>
    <string name="action_sign_in">Sign in</string>
    <string name="no_account_question">Don\'t have an account?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="freelancer_logo">freelancer logo</string>
    <string name="title_activity_contractor_registration_view">Contractor registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First name</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="we_ll_need_some_login_details">We\'ll need some login details.</string>
    <string name="last_name">Last name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Calendar</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_plumbing_electrical"><![CDATA[Category: Plumbing & Electrical]]></string>
    <string name="title_activity_create_job_listing_tabbed">CreateJobListingTabbedActivity</string>
    <string name="tab_text_1">Basic Info</string>
    <string name="tab_text_2">Custom Options</string>
    <string name="tab_text_3">Review</string>
    <string name="use_this_to_continue_through_the_job_listing_creation_process">Use this to continue through the job listing creation process.</string>
    <string name="the_job_listing_creation_process">The job listing creation process</string>
    <string name="a_scrollable_set_of_pages_to_create_a_job_listing">A scrollable set of pages to create a job listing</string>
    <string name="consumer_or_contractor">Are you a consumer or contractor?</string>
    <!-- Home page text variables -->
    <string name="popular_near_you">Popular Near You</string>
    <string name="hair_styling">Hair Styling</string>
    <string name="towing">Towing</string>
    <string name="home_repair">Home Repair</string>
    <string name="promotions">Promotions</string>
    <string name="discount_on_towing">Discount on Towing</string>
    <string name="discount_on_detailing">Discount on Detailing</string>
    <string name="discount_on_haircuts">DISCOUNT ON HAIRCUTS</string>
    <string name="register">Register</string>
    <!-- additional string variables-->
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password1">Password</string>
    <string name="pass">*******</string>
    <string name="register1">Register</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="testingpage">Secret Menu</string>
    <string name="save">Save</string>
    <string name="new_listing">New listing</string>
    <string name="calendar">Calendar</string>
    <string name="what_s_your_job_title1">What\'s your job title?</string>
    <string name="job_title">Job Title</string>
    <string name="well_need_some_additional_information">We\'ll need some additional information.</string>
    <string name="job_category">Job Category</string>
    <string name="service_description">Service Description</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="radius">Radius</string>
    <string name="location">Location</string>
    <string name="base_price">Base Price</string>
    <string name="create_service">Create Service</string>
    <string name="custom_field_type">Custom field type</string>
    <string name="add_custom_field_plus">+</string>
    <string name="additional_cost">Additional cost</string>
    <string name="custom_field_name">Custom field title</string>
    <string name="custom_fields">Custom fields</string>
    <string name="option_name">Option name</string>
    <string name="done">Create Service</string>
    <string name="custom_checkbox_title">Custom checkbox title</string>
    <string name="notifications">Notifications</string>
    <string name="header">Header</string>
    <string name="add">Add</string>
    <string name="multiple_selection">Multi-select</string>
    <string name="single_selection">Single-select</string>
    <string name="fab_job_listing_creation_description">A FAB that creates a new custom option during the job listing creation process</string>
    <string name="post_job_listing">Post job listing</string>
    <string name="job_listing_management">Job Listing Management</string>
    <string name="not_registered_create_an_account">Not registered? Create an account!</string>
    <string name="leave_a_review">Leave a Review</string>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="title_activity_review_activity.java">ReviewActivity.java</string>
    <string name="title_activity_search">Search</string>
</resources>