<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/selection_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <RadioButton
            android:id="@+id/single_selection_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:checked="true"
            android:text="@string/single_selection" />

        <RadioButton
            android:id="@+id/multi_selection_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/multiple_selection" />
    </RadioGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/custom_mutliselect_text_layout"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:padding="8dp"
                app:helperText="* Required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/custom_mutliselect_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/option_name"
                    android:maxHeight="40dp"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_selection_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="0.1"
                android:maxHeight="40dp"
                android:text="@string/add" />
        </LinearLayout>

    </com.google.android.material.chip.ChipGroup>
</LinearLayout>